package com.whattheburger.backend.domain.enums;

public enum CountType {
    COUNTABLE, UNCOUNTABLE, NONE
}
