package com.whattheburger.backend.domain.enums;

public enum OptionTraitType {
    BINARY
}
