package com.whattheburger.backend.domain.enums;

public enum ProductType {
    ONLY, MEAL
}
